BETA8 RELEASE